<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Stork
  ~ Copyright (C) 2019 Tigase, Inc. (office@tigase.com)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as published by
  ~ the Free Software Foundation, version 3 of the License.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program. Look for COPYING file in the top folder.
  ~ If not, see http://www.gnu.org/licenses/.
  -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/couleurgris">
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context="org.tigase.messenger.phone.pro.account.NewAccountActivity">

    <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-black"
            android:textSize="20dp"
            android:text="@string/about_application_name2"
            android:layout_marginTop="25dp"/>

<!--    <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/about_version_name"/>-->

<!--    <ImageView
            android:id="@+id/imageView3"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/stork_logo"/>-->
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_logochat"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_marginLeft="15px"
        android:layout_marginRight="15px"
        app:cardCornerRadius="20px"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50px">
        <Button
            android:id="@+id/useExistingAccountButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@color/black"
            android:text="@string/new_account_login"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_marginLeft="15px"
        android:layout_marginRight="15px"
        app:cardCornerRadius="20px"
        android:layout_marginBottom="50px">
        <Button
            android:id="@+id/createNewAccountButton"
            android:layout_width="match_parent"
            android:layout_height="100px"
            android:layout_centerHorizontal="true"
            android:background="#FFFFFF"
            android:text="@string/new_account_create" />
    </android.support.v7.widget.CardView>

<!--    <TextView
            android:id="@+id/textView4"
            android:layout_marginTop="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/about_copyright"/>

    <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/about_rights"/>-->

</LinearLayout>
</ScrollView>